# wgputest

./: Cargo.toml
pkg/: index.html
src/: audio.rs  bounding_box.rs  box.rs  camera.rs  chatbox.rs  graphics.rs  lib.rs  main.rs  player.rs  shader.wgsl  texture.rs  util.rs  world.rs
src/graphics/: font_shader.wgsl  mod.rs  text.rs  texture.rs  texture_shader.wgsl  textured.rs
src/graphics/text/: packing.rs
src/world/: basic_enemy.rs  jumping_enemy.rs  physics.rs  player.rs  projectile.rs  stage.rs
